# shurly

./: .dockerignore  .env.example  .env.lambda.example  .env.production.example  .gitignore  BRANCH_STRATEGY.md  CHANGELOG.md  CI_CD_SETUP.md  CLAUDE.md  DEPLOYMENT.md  FEATURE_COMPARISON.md  FUNCTIONAL_GAP_ANALYSIS.md  IMPLEMENTATION_TAGS.md  IMPLEMENTATION_TASKS.md  README.md  ROADMAP.md  TESTING.md  build_lambda.sh  docker-compose.yml  dockerfile  dump.rdb  lambda_handler.py  main.py  pyproject.toml  requirements.txt  run_tests.sh  samconfig.toml  template.yaml
.claude/: commit-config.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  test.yml
_pm/: IMPLEMENTATION_TAGS.md  IMPLEMENTATION_TASKS.md  ROADMAP.md  SCREEN_INVENTORY.md
docs/: AWS_ECS_DEPLOYMENT.md  TESTING.md  TEST_COVERAGE_REPORT.md
docs/research/: REBRANDLY_API_ANALYSIS.md
frontend/: astro.config.mjs  package-lock.json  package.json
mcp_server/: README.md  __init__.py  __main__.py  auth.py  curated.py  server.py
scripts/: create_rds.sh  deploy_ecs.sh  init_database.py  run_mcp_local.sh  setup_custom_domain.sh  test_db_connection.sh
server/app/: __init__.py  analytics.py  auth.py  campaigns.py  code.py  health.py  statistics.py  tags.py  urls.py
server/core/: __init__.py  auth.py  config.py
server/schemas/: analytics.py  auth.py  campaign.py  redirect_rule.py  (+3 more)
tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_auth.py.backup  test_campaign_utils.py  test_campaigns.py  test_health.py  test_network.py  test_phase3102_redirect_rules.py  test_phase3103_pixel.py  test_phase3104_orphan_visits.py  test_phase3105_csv.py  test_phase3106_redirect_config.py  test_phase310_multidomain.py  test_phase396_free_wins.py  test_phase52_mcp_tools.py  test_phase53_curated_tools.py  test_phase54_mcp_auth.py  test_phase55_mcp_mount.py  test_tags.py  test_url_tagging.py  test_urls.py  test_user_agent.py  test_utils.py
(+40 files in other folders)
